feat: add API to create and update apartment entity
